2011-08-13  Corinna Vinschen  <corinna@vinschen.de>

	* miscfuncs.cc (CreatePipeOverlapped): New function.
	(ReadPipeOverlapped): Ditto.
	(WritePipeOverlapped): Ditto.
	* miscfuncs.h: Declare new functions.
	* pinfo.cc (commune_process): Call WritePipeOverlapped instead of
	WriteFile.  Set timeout to 1 sec.
	(_pinfo::commune_request): Call ReadPipeOverlapped instead of ReadFile.
	Set timeout to 0.5 secs.
	* sigproc.cc (sig_send): Create pipe using CreatePipeOverlapped.

2011-08-12  Christopher Faylor  <me.cygwin2011@cgf.cx>

	* miscfuncs.cc (create_pipe): Delete obsolete function.
	* miscfuncs.h (create_pipe): Delete define.

	* pipe.c (fhandler_pipe::create_selectable): Delete obsolete comment.

2011-08-12  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_proc.cc (fhandler_proc::closedir): Don't free, but delete
	instead.

2011-08-12  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.h (fhandler_proc::opendir): Declare.
	(fhandler_proc::closedir): Declare.
	* fhandler_proc.cc (fhandler_proc::opendir): New method.  Fetch list
	of active processes here once to avoid potential duplicates and store
	in dir->__handle.
	(fhandler_proc::closedir): New method.  Free dir->__handle.
	(fhandler_proc::readdir): Convert pinfo into a reference to the winpids
	entry in dir->__handle.

2011-08-11  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_proc.cc (fhandler_proc::get_proc_fhandler): Don't allow to
	access process info by using the Windows PID.
	* fhandler_process.cc (fhandler_process::fstat): Ditto.
	(fhandler_process::fill_filebuf): Ditto.

2011-08-11  Corinna Vinschen  <corinna@vinschen.de>

	* (winpids::add): Make sure to store always a Windows PID in
	pidlist, even if pid is a Cygwin PID.
	(winpids::enum_processes): Fetch Cygwin processes from listing of
	shared cygwin object dir in the native NT namespace.  Only if winpid
	is true, fetch Windows processes using an additional call to
	NtQuerySystemInformation.
